k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          image: aaqyaar/test-service:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: env-file
              mountPath: /app/.env
              subPath: .env
      volumes:
        - name: env-file
          configMap:
            name: test-service
      imagePullSecrets:
        - name: docker-secrets
