k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: test-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
